# rustcord

./: Cargo.toml
.cargo/: config
src/: main.rs
src/proxy/: auth.rs  bridge.rs  cfb8.rs  config.rs  crypto.rs  downstream.rs  initial.rs  initial_handler.rs  logger.rs  mod.rs  proxy.rs  session.rs  upstream.rs  util.rs
